added svg component
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
 		"@rjsf/core": "^5.0.0-beta.14",
 		"@rjsf/validator-ajv8": "^5.10.0",
 		"@segment/analytics-next": "^1.17.4",
+		"@svgr/plugin-jsx": "^8.0.1",
 		"@types/chai": "^4.3.0",
 		"@types/express": "^4.17.13",
 		"@types/fs-extra": "^9.0.13",
@@ -140,6 +141,7 @@
 		"codecov": "^3.8.2",
 		"css-loader": "^6.5.1",
 		"esbuild": "^0.17.19",
+		"esbuild-plugin-svgr": "^2.0.0",
 		"esbuild-sass-plugin": "^2.9.0",
 		"eslint": "8.4.1",
 		"eslint-config-prettier": "^8.3.0",
