Fix uninstalling Helm charts
- Show Helm releases in the project explorer using results from `helm list`
- Add description text for items in the application explorer to help
  distinguish them
- Refactor Helm commands into their own folder
- Add integration tests for Helm commands

Fixes #3021

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/package.json
+++ b/package.json
@@ -1477,7 +1477,7 @@
 				},
 				{
 					"command": "openshift.resource.load",
-					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject || viewItem == openshift.k8sObject.helm"
+					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject"
 				},
 				{
 					"command": "openshift.resource.unInstall",
