--- a/package.json
+++ b/package.json
@@ -251,7 +251,8 @@
 		"onCommand:openshift.componentTypesView.registry.openHelmChartsInView",
 		"onCommand:openshift.component.deleteConfigurationFiles",
 		"onCommand:openshift.component.deleteSourceFolder",
-		"onWalkthrough:openshiftWalkthrough"
+		"onWalkthrough:openshiftWalkthrough",
+		"onWalkthrough:serverlessFunctionWalkthrough"
 	],
 	"contributes": {
 		"commands": [
@@ -1598,6 +1599,43 @@
 							"altText": "deploy component"
 						}
 					}
+				]
+			},
+			{
+				"id": "serverlessFunctionWalkthrough",
+				"title": "Getting Started with OpenShift Serverless Functions",
+				"description": "Develop & Deploy Serverless Functions using VSCode.",
+				"steps": [
+					{
+						"id": "createFunction",
+						"title": "Create Function",
+						"description": "Creates a Function in the mentioned directory with the specified language/runtime selected and handles HTTP events. \n[Create Function](command:openshift.Serverless.createFunction)",
+						"media": {
+							"image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/create.gif",
+							"altText": "Create function"
+						},
+						"completionEvents": [
+							"onCommand:openshift.Serverless.createFunction"
+						]
+					},
+					{
+						"id": "buildFunction",
+						"title": "Build Function",
+						"description": "Build a function project (source code in the workspace) as a container image and push to a registry.",
+						"media": {
+							"image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/build.gif",
+						  	"altText": "Build function"
+						}
+					  },
+					  {
+						"id": "runFunction",
+						"title": "Run the Function locally",
+						"description": "Run your function to see how it works locally before to push it on your cluster.\nOnly a function which has the source code opened in the IDE can be run. Right click on the function you want to run (look for its node in the Functions tree), open the context menu (right-click on the node) and click on \"Run\". The output channel will show up with run command where you can see the logs.",
+						"media": {
+							"image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/run.gif",
+						  	"altText": "Run function"
+						}
+					  }
 				]
 			}
 		],
