Revert "Revert "Add a new panel for all OpenShift commands""
This reverts commit 977a76da52814eb51200e0e738eec909b550f6c3.

--- a/.eslintrc
+++ b/.eslintrc
@@ -111,13 +111,19 @@
   },
   "overrides": [
     {
-        "files": ["*.test.ts"],
-        "rules": {
-            "no-unused-expressions": "off",
-            "@typescript-eslint/unbound-method" : "off",
-            "max-nested-callbacks" : "off",
-            "@typescript-eslint/no-unsafe-assignment": 1
-        }
+      "files": ["*.test.ts"],
+      "rules": {
+        "no-unused-expressions": "off",
+        "@typescript-eslint/unbound-method" : "off",
+        "max-nested-callbacks" : "off",
+        "@typescript-eslint/no-unsafe-assignment": 1
+      }
+    },
+    {
+      "files": ["./src/@types/**.d.ts"],
+      "rules": {
+        "header/header": "off"
+      }
     }
   ]
 }
