--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
 		"compile:webviews": "node ./build/esbuild.mjs",
 		"watch": "node ./build/esbuild-watch.mjs",
 		"clean": "shx rm -rf out/build out/src out/test out/tools out/test-resources out/*Viewer out/**.tsbuildinfo",
-		"lint": "eslint . --ext .ts --quiet",
-		"lint-fix": "eslint . --ext .ts --fix",
-		"lint-nic": "eslint . --ext .ts --no-inline-config",
+		"lint": "eslint . --ext .ts --ext .tsx --quiet",
+		"lint-fix": "eslint . --ext .ts --ext .tsx --fix",
+		"lint-nic": "eslint . --ext .ts --ext .tsx --no-inline-config",
 		"check-cycles": "dpdm --no-tree --no-warning --exit-code circular:1 ./src/extension.ts",
 		"bundle-tools": "node ./out/build/bundle-tools.js --platform",
 		"todo": "leasot **/*.ts --ignore node_modules -x",
