New create component UI (#3064)
* Create component options view
* UI consistency (see notes)

In order for all pages of the wizard to be more consistent:
- use `<Container />` as parent for all components,
  so that all the pages are the same width
- all page titles are left justified
- `5em` of margin at the top of each page

* Delete existing 'create component' parts
- Delete the quick pick based create component
- Delete the 'git import' workflow
- Replace the devfile registry viewer with the one contributed in create
  component
- Fix a few bugs I found:
  - If you add staging devfile registry, enable/disable repeatedly in devfile search, list of items will grow

- Clear field button for search field in devfile search
- Select the template project by default if there is only one
  - Handle the case that there are no template projects
- Prepopulate the component name field based on the git url or template project name
- Focus existing Create Component webview instead of opening a second instance
  - There are issues with how message passing is handled if multiple instances of Create Component are running
- Make devfile search scale better when zooming

* Telemetry for create component wizard

Signed-off-by: Jessica He <jhe@redhat.com>
Signed-off-by: David Thompson <davthomp@redhat.com>
Co-authored-by: Jessica He <jhe@redhat.com>

--- a/.eslintignore
+++ b/.eslintignore
@@ -12,10 +12,12 @@ src/webview/cluster
 out
 src/webview/common
 src/webview/create-service
+src/webview/create-component
 src/webview/devfile-registry
 src/webview/welcome
-src/webview/git-import
 src/webview/helm-chart
 src/webview/feedback
 src/webview/serverless-function
+# vendored from https://github.com/IonicaBizau/git-url-parse, see https://github.com/IonicaBizau/git-url-parse/pull/159
+src/util/gitParse.ts
 test/sandbox-registration
