--- a/package.json
+++ b/package.json
@@ -212,8 +212,7 @@
 		"onCommand:openshift.project.create",
 		"onCommand:openshift.project.delete",
 		"onCommand:openshift.project.delete.palette",
-		"onCommand:openshift.component.createFromLocal",
-		"onCommand:openshift.component.openImportFromGit",
+		"onCommand:openshift.component.openCreateComponent",
 		"onCommand:openshift.component.createFromRootWorkspaceFolder",
 		"onCommand:openshift.component.describe",
 		"onCommand:openshift.component.openInBrowser",
@@ -412,21 +411,12 @@
 				"category": "OpenShift"
 			},
 			{
-				"command": "openshift.component.openImportFromGit",
-				"title": "Import from Git",
+				"command": "openshift.component.openCreateComponent",
+				"title": "Create Component",
 				"category": "OpenShift",
 				"icon": {
-					"light": "images/title/light/git-branch.svg",
-					"dark": "images/title/dark/git-branch.svg"
-				}
-			},
-			{
-				"command": "openshift.component.createFromLocal",
-				"title": "New Component",
-				"category": "OpenShift",
-				"icon": {
-					"light": "images/title/light/workspace-new.svg",
-					"dark": "images/title/dark/workspace-new.svg"
+					"light": "images/title/light/add-cluster.svg",
+					"dark": "images/title/dark/add-cluster.svg"
 				}
 			},
 			{
@@ -635,11 +625,6 @@
 				"category": "OpenShift"
 			},
 			{
-				"command": "openshift.componentType.newComponent",
-				"title": "New Component",
-				"category": "OpenShift"
-			},
-			{
 				"command": "openshift.explorer.addCluster.openLaunchSandboxPage",
 				"title": "Launch Developer Sandbox",
 				"category": "OpenShift"
@@ -754,11 +739,6 @@
 			{
 				"command": "openshift.openStatusBar",
 				"title": "OpenShift",
-				"category": "OpenShift"
-			},
-			{
-				"command": "openshift.component.importFromGit",
-				"title": "Import Component from git repository",
 				"category": "OpenShift"
 			},
 			{
@@ -877,12 +857,12 @@
 		"viewsWelcome": [
 			{
 				"view": "openshiftProjectExplorer",
-				"contents": "Cluster is not accessible or you are not logged in.\n[Login](command:openshift.explorer.login)\n[Select Kubernetes Context](command:openshift.explorer.switchContext)\n[Add OpenShift Cluster](command:openshift.explorer.addCluster)\n[$(git-branch) Import from Git](command:openshift.component.openImportFromGit)\n[Create Component](command:openshift.component.createFromLocal)",
+				"contents": "Cluster is not accessible or you are not logged in.\n[Login](command:openshift.explorer.login)\n[Select Kubernetes Context](command:openshift.explorer.switchContext)\n[Add OpenShift Cluster](command:openshift.explorer.addCluster)",
 				"enablement": "openshift.app.explorer.init"
 			},
 			{
 				"view": "openshiftComponentsView",
-				"contents": "You have no OpenShift Components in your workspace yet.\n[$(git-branch) Import from Git](command:openshift.component.openImportFromGit)\n[Create Component](command:openshift.component.createFromLocal)",
+				"contents": "You have no OpenShift Components in your workspace yet.\nYou can create an OpenShift component from a local codebase, a remote git repository, or a template project.\n[Create Component](command:openshift.component.openCreateComponent)",
 				"enablement": "openshift.component.explorer.init"
 			}
 		],
@@ -1047,10 +1027,6 @@
 					"when": "false"
 				},
 				{
-					"command": "openshift.componentType.newComponent",
-					"when": "false"
-				},
-				{
 					"command": "openshift.component.revealContextInExplorer",
 					"when": "false"
 				},
@@ -1104,10 +1080,6 @@
 				},
 				{
 					"command": "openshift.component.forceExitDevMode",
-					"when": "false"
-				},
-				{
-					"command": "openshift.component.importFromGit",
 					"when": "false"
 				},
 				{
@@ -1208,16 +1180,6 @@
 					"group": "navigation@5"
 				},
 				{
-					"command": "openshift.component.createFromLocal",
-					"when": "view == openshiftComponentsView",
-					"group": "navigation"
-				},
-				{
-					"command": "openshift.component.openImportFromGit",
-					"when": "view == openshiftComponentsView",
-					"group": "navigation"
-				},
-				{
 					"command": "openshift.Serverless.createFunction",
 					"when": "view == openshiftServerlessFunctionsView",
 					"group": "navigation@0"
@@ -1226,19 +1188,24 @@
 					"command": "openshift.Serverless.refresh",
 					"when": "view == openshiftServerlessFunctionsView",
 					"group": "navigation@1"
+				},
+				{
+					"command": "openshift.component.openCreateComponent",
+					"when": "view == openshiftComponentsView",
+					"group": "navigation"
 				}
 			],
 			"view/item/context": [
-                {
-                    "command": "openshift.sandbox.signup",
-                    "category": "1@1",
-                    "when": "viewItem == openshift.sandbox.status.none"
-                },
-                {
-                    "command": "openshift.sandbox.open.dashboard",
-                    "category": "1@1",
-                    "when": "viewItem == openshift.sandbox.status.ready"
-                },
+				{
+					"command": "openshift.sandbox.signup",
+					"category": "1@1",
+					"when": "viewItem == openshift.sandbox.status.none"
+				},
+				{
+					"command": "openshift.sandbox.open.dashboard",
+					"category": "1@1",
+					"when": "viewItem == openshift.sandbox.status.ready"
+				},
 				{
 					"command": "clusters.openshift.csv.create",
 					"group": "1@1",
@@ -1539,18 +1506,6 @@
 						]
 					},
 					{
-						"id": "createComponent",
-						"title": "Create a Component using local workspace",
-						"description": "Create a component in the local workspace using the selected starter project and associated `devfile.yaml` configuration. Devfile is a manifest file that contains information about various resources (URL, Storage, Services, etc.) that correspond to your component. \n[Create Component](command:openshift.component.createFromLocal)",
-						"media": {
-							"image": "images/walkthrough/createComponent.gif",
-							"altText": "create component"
-						},
-						"completionEvents": [
-							"onCommand:openshift.componentType.newComponent"
-						]
-					},
-					{
 						"id": "helmChart",
 						"title": "Work with Helm Charts",
 						"description": "Browse the catalog to discover and install Helm Charts.\n[Browse Helm Chart](command:openshift.componentTypesView.registry.openHelmChartsInView)",
@@ -1560,18 +1515,6 @@
 						},
 						"completionEvents": [
 							"onCommand:openshift.componentTypesView.registry.openHelmChartsInView"
-						]
-					},
-					{
-						"id": "importFromGit",
-						"title": "Create a Component from git repository",
-						"description": "Create a component directly from git repository. The guided workflow will detect the repository and recommend the deployment `devfile` for it. Users can also provide their own custom devfile. \n[Import from Git](command:openshift.component.openImportFromGit)",
-						"media": {
-							"image": "images/walkthrough/git-import-walkthrough.gif",
-							"altText": "create component from git"
-						},
-						"completionEvents": [
-							"onCommand:openshift.component.openImportFromGit"
 						]
 					},
 					{
