--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
 	"keywords": [
 		"OpenShift",
 		"Kubernetes",
-        "Serverless",
-        "Functions",
+		"Serverless",
+		"Functions",
 		"Red Hat",
 		"devsandbox",
 		"kubernetes-extension-cloud-provider",
@@ -168,6 +168,7 @@
 		"react": "^17.0.2",
 		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "^17.0.2",
+		"react-error-boundary": "^4.0.10",
 		"react-lazylog": "^4.5.3",
 		"react-loader-spinner": "^4.0.0",
 		"react-phone-input-2": "^2.14.0",
@@ -1126,7 +1127,6 @@
 					"command": "openshift.Serverless.stopRun",
 					"when": "false"
 				}
-
 			],
 			"view/title": [
 				{
@@ -1569,18 +1569,18 @@
 						"description": "Build a function project (source code in the workspace) as a container image and push to a registry.",
 						"media": {
 							"image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/build.gif",
-						  	"altText": "Build function"
+							"altText": "Build function"
 						}
-					  },
-					  {
+					},
+					{
 						"id": "runFunction",
 						"title": "Run the Function locally",
 						"description": "Run your function to see how it works locally before to push it on your cluster.\nOnly a function which has the source code opened in the IDE can be run. Right click on the function you want to run (look for its node in the Functions tree), open the context menu (right-click on the node) and click on \"Run\". The output channel will show up with run command where you can see the logs.",
 						"media": {
 							"image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/run.gif",
-						  	"altText": "Run function"
+							"altText": "Run function"
 						}
-					  }
+					}
 				]
 			}
 		],
