Update documentation for create component
Closes #3087

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/package.json
+++ b/package.json
@@ -1511,9 +1511,27 @@
 						]
 					},
 					{
+						"id": "createComponentWizard",
+						"title": "Create Component",
+						"description": "By clicking on the '+' in the Components view in the OpenShift sidebar, you can configure a project so that it can be run on OpenShift/Kubernetes. You can import an existing local codebase, import an existing remote git repository, or create a new project from a template.\n[Create Component](command:openshift.component.openCreateComponent)",
+						"media": {
+							"image": "images/walkthrough/create-component-demo.gif",
+							"altText": "Screencast of creating a component from a git repository"
+						}
+					},
+					{
+						"id": "createComponentFromWorkspaceFolder",
+						"title": "Create Component from workspace folder",
+						"description": "If you right click on a root folder in the explorer, you can use the `Create Component From Folder` option to create a component from that folder directly.",
+						"media": {
+							"image": "images/walkthrough/createComponentFromWorkspaceFolder.gif",
+							"altText": "create component from workspace folder"
+						}
+					},
+					{
 						"id": "showRegistries",
 						"title": "Create Component from Devfile registries webview",
-						"description": "Select a specific devfile registry to create a component directly.\n[Browse Devfile Registries](command:openshift.componentTypesView.registry.openInView)",
+						"description": "Select a specific devfile registry to create a component from a template project more quickly.\n[Browse Devfile Registries](command:openshift.componentTypesView.registry.openInView)",
 						"media": {
 							"image": "images/walkthrough/showRegistries.gif",
 							"altText": "show registry"
@@ -1521,15 +1539,6 @@
 						"completionEvents": [
 							"onCommand:openshift.componentTypesView.registry.openInView"
 						]
-					},
-					{
-						"id": "createComponentFromWorkspaceFolder",
-						"title": "Create Component from workspace folder",
-						"description": "Use the `Create Component From Folder` option from the command palette in your root workspace folder to create a component from that folder directly.",
-						"media": {
-							"image": "images/walkthrough/createComponentFromWorkspaceFolder.gif",
-							"altText": "create component from workspace folder"
-						}
 					},
 					{
 						"id": "helmChart",
