Hide "Create Component from Folder" when there is already a devfile.yaml
Given that the extension is running, configure a variable to show/hide
the "Create Component from Folder" context menu item
based on if there is already a devfile present in the folder.

Closes #3095

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/package.json
+++ b/package.json
@@ -876,7 +876,7 @@
 			"explorer/context": [
 				{
 					"command": "openshift.component.createFromRootWorkspaceFolder",
-					"when": "explorerResourceIsFolder && explorerResourceIsRoot"
+					"when": "explorerResourceIsFolder && explorerResourceIsRoot && resourceFilename not in ext.folderContainsDevfile"
 				}
 			],
 			"commandPalette": [
