--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -44,13 +44,6 @@ jobs:
         with:
           run: npm run test:coverage --silent
 
-      # Upload coverage to codecov.io
-      - name: Codecov
-        uses: codecov/codecov-action@40a12dcee2df644d47232dde008099a3e9e4f865 #v3.1.2
-        if: runner.os == 'Linux'
-        with:
-          file: ./out/coverage/coverage-final.json
-
       # UI tests fail under linux
       # Run UI tests
       - name: Run UI Tests
@@ -62,6 +55,36 @@ jobs:
           run: npm run public-ui-test
           options: -screen 0 1920x1080x24
 
+      - uses: engineerd/setup-kind@aa272fe2a7309878ffc2a81c56cfe3ef108ae7d0 #v0.5.0
+        if: (success() || failure()) && runner.os == 'Linux'
+        name: Start cluster
+        with:
+          version: v0.11.1
+
+      - name: Configure cluster
+        if: (success() || failure()) && runner.os == 'Linux'
+        run: |
+          curl -sL https://github.com/operator-framework/operator-lifecycle-manager/releases/download/v0.19.1/install.sh | bash -s v0.19.1
+          kubectl create -f https://operatorhub.io/install/service-binding-operator.yaml
+          kubectl create -f https://operatorhub.io/install/stable/cloud-native-postgresql.yaml
+          nb=0
+          echo -n "Waiting for operator to show up "
+          while [ "$nb" != "2" ]
+          do
+            echo -n "."
+            sleep 1
+            nb=`kubectl get pods -n operators --no-headers --ignore-not-found | grep Running | wc -l`
+          done
+          echo CLUSTER_URL=`kubectl cluster-info | sed -n -e "s/\x1B\[[0-9;]*[a-zA-Z]//g" -e '1s/.*running at \(.*\)$/\1/p'` >> $GITHUB_ENV
+
+      - name: Build and run integration tests
+        if: (success() || failure()) && runner.os == 'Linux'
+        uses: coactions/setup-xvfb@b6b4fcfb9f5a895edadc3bc76318fae0ac17c8b3 #v1.0.1
+        env:
+          NODE_OPTIONS: --max_old_space_size=16384
+        with:
+          run: npm run test-integration:coverage --silent
+
       # Archiving integration tests artifacts
       - name: Upload test artifacts
         uses: actions/upload-artifact@v3
@@ -72,3 +95,9 @@ jobs:
             test-resources/screenshots/*.png
           retention-days: 2
 
+      # Upload coverage to codecov.io
+      - name: Codecov
+        uses: codecov/codecov-action@40a12dcee2df644d47232dde008099a3e9e4f865 #v3.1.2
+        if: (success() || failure()) && runner.os == 'Linux'
+        with:
+          files: ./coverage/unit/coverage-final.json,./coverage/integration/coverage-final.json
