--- a/test/ui/Jenkinsfile
+++ b/test/ui/Jenkinsfile
@@ -16,7 +16,7 @@ node('rhel8') {
         stage('integration tests') {
             catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
                 wrap([$class: 'Xvnc']) {
-                sh "npm run test-integration"
+                sh "IS_OPENSHIFT=1 npm run test-integration"
                 junit 'report.xml'
                 }
             }
