--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
 		"@types/targz": "^1.0.1",
 		"@types/tmp": "0.2.2",
 		"@types/unzip-stream": "^0.3.1",
+		"@types/uuid": "^9.0.2",
 		"@types/validator": "^13.7.0",
 		"@types/vscode": "1.64.0",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
@@ -187,6 +188,7 @@
 		"tslint": "^5.20.1",
 		"typescript": "^4.5.2",
 		"utf-8-validate": "^5.0.7",
+		"uuid": "^9.0.0",
 		"vscode-extension-tester": "^5.2.0"
 	},
 	"activationEvents": [
@@ -1486,7 +1488,7 @@
 				},
 				{
 					"command": "openshift.Serverless.invoke",
-					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/"
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions|running)$/"
 				},
 				{
 					"command": "openshift.Serverless.deploy",
@@ -1628,14 +1630,14 @@
 							"image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/run.gif",
 							"altText": "Run function"
 						}
-					  },
-					  {
+					},
+					{
 						"id": "deployFunction",
 						"title": "Deploy the Function",
 						"description": "Deploys a function to the currently configured Knative-enabled cluster from your IDE.\nOnly a function which has the source code opened in the IDE can be pushed. Right-click on the function you want to deploy (look for its node in the Functions tree), open the context menu (right-click on the node) and click on \"Deploy\". The Output Channel will show up with the deploy command where you can see the logs.",
 						"media": {
-						  "image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/deploy.gif",
-						  "altText": "Deploy function"
+							"image": "https://raw.githubusercontent.com/redhat-developer/vscode-openshift-tools/main/images/gif/walkthrough/serverless-function/deploy.gif",
+							"altText": "Deploy function"
 						}
 					}
 				]
