--- a/package.json
+++ b/package.json
@@ -813,6 +813,36 @@
 				"command": "openshift.Serverless.stopRun",
 				"title": "Stop",
 				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.addEnv",
+				"title": "Environment Variables",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.addLabel",
+				"title": "Labels",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.addVolume",
+				"title": "Volumes",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.removeEnv",
+				"title": "Environment Variables",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.removeLabel",
+				"title": "Labels",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.removeVolume",
+				"title": "Volumes",
+				"category": "OpenShift"
 			}
 		],
 		"keybindings": [
@@ -826,6 +856,16 @@
 				"key": "alt+shift+p",
 				"mac": "ctrl+shift+p"
 			}
+		],
+		"submenus": [
+			{
+			  "id": "serverlessfunction/addConfig",
+			  "label": "Add"
+			},
+			{
+				"id": "serverlessfunction/removeConfig",
+				"label": "Remove"
+			  }
 		],
 		"viewsContainers": {
 			"activitybar": [
@@ -1135,6 +1175,30 @@
 				{
 					"command": "openshift.Serverless.stopRun",
 					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.addEnv",
+					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.addLabel",
+					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.addVolume",
+					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.removeEnv",
+					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.removeLabel",
+					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.removeVolume",
+					"when": "false"
 				}
 			],
 			"view/title": [
@@ -1202,6 +1266,40 @@
 					"command": "openshift.component.openCreateComponent",
 					"when": "view == openshiftComponentsView",
 					"group": "navigation"
+				}
+			],
+			"serverlessfunction/addConfig": [
+				{
+					"command": "openshift.Serverless.addLabel",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@1"
+				},
+				{
+					"command": "openshift.Serverless.addVolume",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@2"
+				},
+				{
+				  "command": "openshift.Serverless.addEnv",
+				  "when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+				  "group": "c1@3"
+				}
+			],
+			"serverlessfunction/removeConfig": [
+				{
+					"command": "openshift.Serverless.removeLabel",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@1"
+				},
+				{
+					"command": "openshift.Serverless.removeVolume",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@2"
+				},
+				{
+				  "command": "openshift.Serverless.removeEnv",
+				  "when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+				  "group": "c1@3"
 				}
 			],
 			"view/item/context": [
@@ -1486,6 +1584,16 @@
 				{
 					"command": "openshift.Serverless.stopRun",
 					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(running)$/"
+				},
+				{
+					"submenu": "serverlessfunction/addConfig",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@1"
+				},
+				{
+					"submenu": "serverlessfunction/removeConfig",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@2"
 				}
 			]
 		},
